# syize-toolkits

./: .gitattributes  .gitignore  .gitmodules  README.md  meson.build  pyproject.toml  setup.cfg
.github/workflows/: dev-build-test.yaml  python-package.yaml
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/api/: cli.rst  fortran.formatter.rst  fortran.rst  index.rst  nc.nc.rst  nc.rst  picture.rst  plot.rst  qt.downloader.rst  qt.rst  string.rst  tv_show_manage.rename.rst  tv_show_manage.rst  tv_show_manage.sort.rst  tv_show_manage.utils.rst  utils.rst
pic/: .gitattributes
syize/: __init__.py  _entry_fortran.py  _entry_netcdf.py  _entry_picture.py  _entry_string.py  _entry_tvsm.py  cli.py  diff_run.py  meson.build  picture.py  picture_run.py  plot.py  run.py  string.py  ts_downloader.py  ts_downloader_run.py  utils.py
syize/fortran/: README.md  __init__.py  formatter.py  meson.build
syize/nc/: __init__.py  nc.py
syize/qt/: __init__.py  downloader.py
syize/tv_show_manage/: __init__.py  rename.py  sort.py  utils.py
