[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "syize"
version = "1.2.0"
authors = [{name = "Syize", email = "syizeliu@gmail.com"}]
description = "A tool kit package"
dependencies =  ["Pillow", "pytesseract", "pdf2image", "rich"]

[project.scripts]
picture = "syize.picture_run:run"
string = "syize.string_run:run"

[tool.poetry]
readme = "README.md"