[build-system]
requires = ["meson-python"]
build-backend = "mesonpy"

[project]
name = "syize"
version = "1.2.6"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = '>=3.10'
authors = [{name = "Syize", email = "syizeliu@gmail.com"}]
maintainers = [
    { name = "Syize", email = "syizeliu@gmail.com" },
]
description = "A tool kit package"
dependencies =  ["Pillow", "pytesseract", "pdf2image", "rich", "matplotlib", "Cartopy", "haversine"]

[project.scripts]
syize_pic = "syize.picture_run:run"
syize_str = "syize.string_run:run"
syize_diff = "syize.diff_run:run"

[tool.poetry]
readme = "README.md"