[build-system]
requires = ["meson-python"]
build-backend = "mesonpy"

[project]
name = "syize"
version = "1.2.16"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = '>=3.10'
authors = [{name = "Syize", email = "syizeliu@gmail.com"}]
maintainers = [
    { name = "Syize", email = "syizeliu@gmail.com" },
]
description = "A tool kit package"
dependencies =  [
    "Pillow",
    "pytesseract",
    "pdf2image",
    "rich",
    "matplotlib",
    "Cartopy",
    "haversine",
    "pyside6",
    "prompt-toolkit>=3.0.52",
    "xarray>=2025.6.1",
    "netcdf4>=1.7.3",
]

[project.scripts]
syize = "syize.cli:entry_point"
tvsm = "syize.cli:tvsm_entry_point"

[tool.poetry]
readme = "README.md"

[tool.ruff]
line-length = 130

[tool.ruff.lint]
select = ["D", "E", "F", "I"]
ignore = ["F403", "D211", "D212", "D200", "D203", "D401", "D404", "D205", "D400", "D415"]

[tool.pyright]
include = ["syize"]
pythonVersion = "3.10"
pythonPlatform = "Linux"
reportArgumentType = false
