[metadata]
name = syize
version = 1.0.0
description = A tool kit package
author = Syize
author_email = syizeliu@gmail.com

[options]
install_requires =
    Pillow
    pytesseract
packages = find:

[options.packages.find]
where = .
include = syize*

[options.entry_points]
console_scripts =
    picture = syize.picture_run:run
    string = syize.string_run:run